Finalized notes on notebooks

--- a/housing.ipynb
+++ b/housing.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Housing Prices From 2011 to 2021\n",
+    "## Analysis\n",
+    "- Minnesota has seen a large increase in housing prices since 2021.\n",
+    "- The Twin Cities region has seen a 74.39% change since 2011, and the rest of Minnesota has seen a 55.55% increase. This 18.84% difference shows that the Twin Cities region has prices growing at a faster rate than the rest of the state, meaning that given enough time, this could make a notable difference in income to expenses ratios for the economic development regions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## What does the FHFA HPI represent?\n",
     "The FHFA HPI is a broad measure of the movement of single-family house prices. The FHFA HPI is a weighted, repeat-sales index, meaning that it measures average price changes in repeat sales or refinancings on the same properties. This information is obtained by reviewing repeat mortgage transactions on single-family properties whose mortgages have been purchased or securitized by Fannie Mae or Freddie Mac since January 1975.\n",
     "\n",
@@ -12,10 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import Dependencies\n",
     "import pandas as pd \n",
     "import csv\n",
     "import os\n",
@@ -27,12 +38,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## HPI for State of Minnesota"
+    "## HPI for State of Minnesota\n",
+    "This section shows what housing prices look like over time for the state as a whole. This is largely irrelevant to answering the main question, but it is interesting to see."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -230,12 +242,13 @@
        "9               63.28               46.00         NaN  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Import CSV\n",
     "csvpath = \"Datasets/HPI_AT_BDL_state.csv\"\n",
     "\n",
     "house_price_index = pd.read_csv(csvpath)\n",
@@ -244,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -367,19 +380,20 @@
        "9               63.28               46.00         NaN  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Drop unneeded text rows\n",
     "house_price_index_nohead = house_price_index.drop([0, 1, 2, 3, 4])\n",
     "house_price_index_nohead.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +405,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -518,19 +532,20 @@
        "9               63.28               46.00  NaN  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Rename columns to something more readable\n",
     "house_price_index_nohead.rename(columns=house_price_index_nohead.iloc[0], inplace=True)\n",
     "house_price_index_nohead.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -646,19 +661,20 @@
        "1091              68.46              42.26  NaN  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Narrow parameters to just Minnesota\n",
     "minnesota_hpi = house_price_index_nohead.loc[house_price_index_nohead[\"State\"] == \"Minnesota\"]\n",
     "minnesota_hpi.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -858,19 +874,20 @@
        "1133             290.59             179.40  NaN  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Narrow the time span\n",
     "minnesota_hpi_10_years = minnesota_hpi[(minnesota_hpi[\"Year\"] > \"2010\") & (minnesota_hpi[\"Year\"] <= \"2021\")]\n",
     "minnesota_hpi_10_years"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -887,12 +904,13 @@
     }
    ],
    "source": [
+    "# Change HPI column to float, as it was causing issues with charting\n",
     "minnesota_hpi_10_years[\"HPI\"] = minnesota_hpi_10_years[\"HPI\"].map(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -904,6 +922,7 @@
     }
    ],
    "source": [
+    "# Find the percentage change from 2011 to 2021\n",
     "all_first = minnesota_hpi_10_years.loc[1123][\"HPI\"]\n",
     "all_last = minnesota_hpi_10_years.loc[1133][\"HPI\"]\n",
     "\n",
@@ -913,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -930,6 +949,7 @@
     }
    ],
    "source": [
+    "# Chart\n",
     "x_axis = minnesota_hpi_10_years[\"Year\"]\n",
     "y_axis = minnesota_hpi_10_years[\"HPI\"]\n",
     "plt.plot(x_axis, y_axis)\n",
@@ -940,12 +960,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## HPI for Minneapolis/St. Paul"
+    "## HPI for Minneapolis/St. Paul\n",
+    "In this section, we narrow down the data to data for the Twin Cities region only, so we are able to chart the difference near the end of the notebook. Here, we find that this region had a 74.39% increase in housing prices from 2011 to 2021."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1086,12 +1107,13 @@
        "9  Abilene, TX  10180  1977    2   -               -"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Import CSV\n",
     "csvpath2 = \"Datasets/HPI_AT_metro.csv\"\n",
     "\n",
     "msp_hpi_start = pd.read_csv(csvpath2, header=None)\n",
@@ -1102,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1200,19 +1222,20 @@
        "45414               -  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Narrow down to \"Minneapolis-St. Paul-Bloomington\"\n",
     "msp_hpi_all = msp_hpi_start.loc[msp_hpi_start[\"City\"] == \"Minneapolis-St. Paul-Bloomington, MN-WI\"]\n",
     "msp_hpi_all.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1239,19 +1262,20 @@
        "dtype: object"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Change type of Year\n",
     "msp_hpi_all[\"Year\"] = msp_hpi_all[\"Year\"].map(str)\n",
     "msp_hpi_all.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1349,19 +1373,20 @@
        "45558           -0.36  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Narrow the time span\n",
     "msp_hpi_10_years = msp_hpi_all[(msp_hpi_all[\"Year\"] > \"2010\") & (msp_hpi_all[\"Year\"] <= \"2021\")]\n",
     "msp_hpi_10_years.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1525,19 +1550,20 @@
        "45597           -0.67  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Grab only data for Quarter 4, since we are tracking change year over year, not quarter over quarter\n",
     "msp_hpi_10_qtr_4 = msp_hpi_10_years.loc[msp_hpi_10_years[\"Qtr\"] == 4]\n",
     "msp_hpi_10_qtr_4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1554,12 +1580,13 @@
     }
    ],
    "source": [
+    "# Change type of HPI for charting\n",
     "msp_hpi_10_qtr_4[\"HPI\"] = msp_hpi_10_qtr_4[\"HPI\"].map(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1588,12 +1615,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## HPI for Nonmetro Minnesota"
+    "## HPI for Nonmetro Minnesota\n",
+    "This section shows the changes in housing prices for nonmetro Minnesota. Here, we are able to see that the rest of Minnesota had a 55.55% increase in housing prices from 2011."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1735,12 +1763,13 @@
        "9         ( 1.64)  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Import CSV\n",
     "csvpath3 = \"Datasets/HPI_AT_nonmetro.csv\"\n",
     "\n",
     "greatermn_hpi_start = pd.read_csv(csvpath3, header=None)\n",
@@ -1750,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1835,19 +1864,20 @@
        "2317    MN  1996       1  107.70        ( 0.74)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Narrow down to MN only\n",
     "greatermn_hpi_all = greatermn_hpi_start.loc[greatermn_hpi_start[\"State\"] == \"MN\"]\n",
     "greatermn_hpi_all.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1861,19 +1891,20 @@
        "dtype: object"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Narrow down time span\n",
     "greatermn_hpi_10_years = greatermn_hpi_all[(greatermn_hpi_all[\"Year\"] > \"2010\") & (greatermn_hpi_all[\"Year\"] <= \"2021\")]\n",
     "greatermn_hpi_10_years.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2012,19 +2043,20 @@
        "2420    MN  2021       4  294.52        ( 2.02)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Find only Quarter 4 data, as we are tracking data year over year, not quarter over quarter\n",
     "greatermn_hpi_10_qtr_4 = greatermn_hpi_10_years.loc[(greatermn_hpi_10_years[\"Quarter\"] == \"4\")]\n",
     "greatermn_hpi_10_qtr_4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2041,12 +2073,13 @@
     }
    ],
    "source": [
+    "# Change Index Type for charting\n",
     "greatermn_hpi_10_qtr_4[\"Index\"] = greatermn_hpi_10_qtr_4[\"Index\"].map(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2073,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2086,7 +2119,7 @@
     }
    ],
    "source": [
-    "# Math\n",
+    "# Math to find percent changes\n",
     "msp_first = msp_hpi_10_qtr_4.loc[45557][\"HPI\"]\n",
     "msp_last = msp_hpi_10_qtr_4.loc[45597][\"HPI\"]\n",
     "\n",
@@ -2102,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2118,9 +2151,6 @@
    ],
    "source": [
     "# Chart Together\n",
-    "#all_x_axis = minnesota_hpi_10_years[\"Year\"]\n",
-    "#all_y_axis = minnesota_hpi_10_years[\"HPI\"]\n",
-    "#all_mn = plt.plot(all_x_axis, all_y_axis, color=\"blue\", label=\"Total Minnesota\")\n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "msp_x_axis = msp_hpi_10_qtr_4[\"Year\"]\n",
@@ -2139,9 +2169,7 @@
     "plt.xlabel(\"Year\")\n",
     "plt.ylabel(\"Housing Price Index (HPI)\")\n",
     "fig.patch.set_facecolor(\"lightsteelblue\")\n",
-    "#ax.set_facecolor(\"lightgrey\")\n",
-    "#plt.grid()\n",
-    "\n",
+    "plt.savefig(\"change_in_housing_prices.png\")\n",
     "plt.show()"
    ]
   }
